--- a/2nmc-demo-gcc/make_mc12101/Makefile1
+++ b/2nmc-demo-gcc/make_mc12101/Makefile1
@@ -113,7 +113,7 @@ $(TMP_DIR)/dumps/%.dump: $(TMP_DIR)/%.o
 $(TMP_DIR):
 	-mkdir "$(@)"
 
-$(TARGET): $(TMP_DIR) $(OBJECTS) nmc4vars_win.mk Makefile1
+$(TARGET): $(TMP_DIR) $(OBJECTS) $(ALL_H)  nmc4vars_win.mk Makefile1
 	$(CC) $(LINKER_FLAGS) $(OBJECTS) $(LIBS)
 
 nmc4vars_win.mk:
