x86++, added 32th row to dydx table, fixed bug in mulMatVec x86

--- a/app/templates/sometest/make_mc12101_nmpu1_gcc/mc12101brd-nmpu1.cfg
+++ b/app/templates/sometest/make_mc12101_nmpu1_gcc/mc12101brd-nmpu1.cfg
@@ -15,8 +15,8 @@ SEGMENTS
 {
 	code           : in C0_IMU0;
 	data           : in C0_IMU1;
-	seg_imu0       : in C0_IMU2;
-	seg_imu1       : in C0_IMU3;
+	seg_imu0       : in C0_IMU0;
+	seg_imu1       : in C0_IMU1;
 	seg_imu2       : in C0_IMU2;
 	seg_imu3       : in C0_IMU3;
 	seg_ddr  :in EMI;
@@ -25,7 +25,10 @@ SEGMENTS
 
 SECTIONS
 {
-	.text          : in code;
+	.text          : in shared0;
+	.text_nmgl     : in code;
+	.text_demo3d   : in code;
+	.text_demo3dExt   : in shared0;
 	.init          : in code;
 	.fini          : in code;
 
