--- a/app/templates/sometest/make_mc12101_nmpu0_gcc/mc12101brd-nmpu0.cfg
+++ b/app/templates/sometest/make_mc12101_nmpu0_gcc/mc12101brd-nmpu0.cfg
@@ -5,6 +5,10 @@ MEMORY
 	C0_IMU1: at 0x00008000, len = 0x00008000;	// NMC0 128kB
 	C0_IMU2: at 0x00010000, len = 0x00008000;	// NMC0 128kB
 	C0_IMU3: at 0x00018000, len = 0x00008000;	// NMC0 128kB
+	C0_IMU4: at 0x00020000, len = 0x00008000;	// NMC0 128kB
+	C0_IMU5: at 0x00028000, len = 0x00008000;	// NMC0 128kB
+	C0_IMU6: at 0x00030000, len = 0x00008000;	// NMC0 128kB
+	C0_IMU7: at 0x00038000, len = 0x00008000;	// NMC0 128kB
 	
 	SHMEM0 : at 0x000A0000, len = 0x00010000;	// shared 256kB
 	SHMEM1 : at 0x000B0000, len = 0x00010000;	// shared 256kB
@@ -19,13 +23,19 @@ SEGMENTS
 	seg_imu1       : in C0_IMU3;
 	seg_imu2       : in C0_IMU2;
 	seg_imu3       : in C0_IMU3;
+	seg_imu4       : in C0_IMU4;
+	seg_imu5       : in C0_IMU5;
+	seg_imu6       : in C0_IMU6;
+	seg_imu6       : in C0_IMU7;
 	seg_ddr  :in EMI;
 	shared0: in EMI;
 }
 
 SECTIONS
 {
-	.text          : in code;
+	.text          : in shared0;
+	.text_nmgl     : in code;
+	.text_demo3d   : in code;
 	.init          : in code;
 	.fini          : in code;
 
@@ -43,11 +53,19 @@ SECTIONS
 	.data_imu1     : in seg_imu1;
 	.data_imu2     : in seg_imu2;
 	.data_imu3     : in seg_imu3;
+	.data_imu4     : in seg_imu4;
+	.data_imu5     : in seg_imu5;
+	.data_imu6     : in seg_imu6;
+	.data_imu7     : in seg_imu7;
 	
 	.data_imu0.bss : in seg_imu0;
 	.data_imu1.bss : in seg_imu1;
 	.data_imu2.bss : in seg_imu2;
 	.data_imu3.bss : in seg_imu3;
+	.data_imu4.bss : in seg_imu4;
+	.data_imu5.bss : in seg_imu5;
+	.data_imu6.bss : in seg_imu6;
+	.data_imu7.bss : in seg_imu7;
 
 	.rpc_services.bss: in seg_ddr;
 	.rpc_services    : in seg_ddr;
