--- a/app/templates/sometest/make_mc12101_nmpu1_gcc/Makefile
+++ b/app/templates/sometest/make_mc12101_nmpu1_gcc/Makefile
@@ -54,7 +54,7 @@ PROJECT          = main1
 OUT_DIR          = .
 TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
-SRC_DIRS 		 = $(ROOT)/src_proc1/nm
+SRC_DIRS 		 = $(ROOT)/src_proc1/nm ..
 LIB_DIRS         = -L "$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib"
 TMP_DIR          = Release
 #-------------- RELEASE/ALL config -------------------
@@ -93,7 +93,6 @@ all:  $(TARGET)
 	
 #	$(MAKE) -j4 DEBUG=y
 #	$(MAKE) -j4
-
 	
 $(TMP_DIR):
 	-mkdir "$(@)"
