Add run target for mc12101_nmpu1_gcc platform
Run the test using `make run` or `mc12101run ./filename.abs -p`

--- a/app/templates/sometest/make_mc12101_nmpu1_gcc/Makefile
+++ b/app/templates/sometest/make_mc12101_nmpu1_gcc/Makefile
@@ -94,6 +94,9 @@ all:  $(TARGET)
 	
 #	$(MAKE) -j4 DEBUG=y
 #	$(MAKE) -j4
+
+run: $(TARGET)
+	mc12101run $(TARGET) -p
 	
 $(TMP_DIR):
 	-mkdir "$(@)"
