--- a/app/templates/sometest/make_emu6405/emu6405.cfg
+++ b/app/templates/sometest/make_emu6405/emu6405.cfg
@@ -32,8 +32,8 @@ SECTIONS
 	.fini				: in code;
 	
 	.data				: in ext_data;
-	.bss				: in data;
-	.stack				: in data;
+	.bss				: in ext_data;
+	.stack				: in ext_data;
 	.heap				: in ext_data;
 	.heap1				: in ext_data;
 	.heap2				: in ext_data;
