--- a/test/perf/rcm/Makefile
+++ b/test/perf/rcm/Makefile
@@ -9,22 +9,20 @@ all: config_mc12101_0_gcc config_mc12101_1_gcc run outdir
 run:
 
 
-all_mc12101:
-	testperf config -i ../../../include -b make_mc12101_nmpu0
-	testperf config -i ../../../include -b make_mc12101_nmpu1 --point fixed
+all_mc12101: configure0 configure1
 	testperf run
 
 configure0 config_nmpu0:
-	testperf config -i ../../../include -b make_mc12101_nmpu0-ld
+	testperf config -i ../../../include/demo3d_nm0.h -b make_mc12101_nmpu0-ld
 
 configure1 config_nmpu1:
-	testperf config -i ../../../include -b make_mc12101_nmpu1-ld --point fixed	
+	testperf config -i ../../../include/demo3d_nm1.h -b make_mc12101_nmpu1-ld --point fixed	
 
 run:
 	testperf run
 
 kill:
-	testperf del
+	testperf kill
 
 outdir:
 	testperf outdir
