init textureTriangle integration branch
This branch is used to temporary store changes made for integration of
textureTriangle to nmOpengl. git stash could be used but changes can be
losed then. Steps to apply this changes without commit:
1) Switch to branch where you want to apply changes
2) git merge this branch.
3) git reset --soft HEAD^1 and git restore --staged .

You must avoid conflicts at step 3. cherry pick commit from
textureTriangle to textureTriangle_integration branch and then perform
step 3 with --squash flag.
textureTriangle.cpp, textureTriangle.h and texture_config.h from
tests/nmpu1/ must be copied to src_proc1/common/ to use texture.
textureTriangle.cpp contains invalid include tex_common.h instead of
nmgltex_common.h. All commits that contains changes for nmOpenGL to
integrate texturing also have tag "[texture integration]" in commit.
[texture integration]

--- a/2nmc-demo-gcc/make_mc12101/Makefile0
+++ b/2nmc-demo-gcc/make_mc12101/Makefile0
@@ -64,6 +64,7 @@ AS_FLAGS    	 = -c -mmas -x assembler -mnmc4-float
 LIBS             = -lnmpp-nmc4f -lhal-mc12101
 LINKER_FLAGS     = -Xlinker -Map=.main0.map $(LIB_DIRS) -save-temps "-Wl,-Tldscript-nmc0.ld" -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
 #LINKER_FLAGS    += -Wl,--section-start,.heap4=0x8000,--defsym,__HEAP_4_END=0x200000
+CC_FLAGS         += -DTEXTURE_ENABLED
 
 #=================== SOURCE & OBJECTS COLLECTION ===========================
 
