--- a/2nmc-demo-gcc/make_mc12101/Makefile1
+++ b/2nmc-demo-gcc/make_mc12101/Makefile1
@@ -50,11 +50,12 @@ ROOT             = ../..
 include $(ROOT)/global.mk
 include 		 nmc4vars_win.mk
 #-------------- target & input dirs -------------------
+PROFILE			 = ../src_target1/proflist_generated1.asm
 PROJECT          = main1
 OUT_DIR          = .
 TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
-SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc1 $(ROOT)/src_proc1/common $(ROOT)/src_proc $(ROOT)/src_proc1/nm ../src_target1 ./
+SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc1 $(ROOT)/src_proc1/common $(ROOT)/src_proc $(ROOT)/src_proc1/nm ../src_target1
 LIB_DIRS         = -L "$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib"
 TMP_DIR          = Release
 #-------------- RELEASE/ALL config -------------------
@@ -63,8 +64,8 @@ CC_FLAGS		 = -O2 -fno-builtin-printf -std=c++11
 AS               = nmc-gcc 				 
 AS_FLAGS    	 = -c -mmas -x assembler -Wa,-split_sir -mnmc4-fixed
 LIBS             = -lnmpp-nmc4 -lhal-mc12101
-#LINKER_FLAGS     = -nostartfiles "$(NMC_GCC_TOOLPATH)/nmc4-ide/nmc/lib/nmc4/crti.o" "$(NMC_GCC_TOOLPATH)/nmc4-ide/nmc/lib/nmc4/crtn.o" -Xlinker -Map=.main1.map $(LIB_DIRS) "-Wl,-cmc12101brd-nmc1.cfg"  -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
-LINKER_FLAGS     = -Xlinker -Map=.main1.map $(LIB_DIRS) "-Wl,-Tldscript-nmc1.ld"  -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
+MAP		         = $(PROJECT).map
+LINKER_FLAGS     = -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-Tldscript-nmc1.ld"  -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
 #=================== SOURCE & OBJECTS COLLECTION ===========================
 
 .SUFFIXES:
@@ -108,13 +109,10 @@ $(TMP_DIR)/dumps/%.dump: $(TMP_DIR)/%.o
 	nmc-objdump $< -d -t -x -a >> $@
 	
 	
-	
-
-	
 $(TMP_DIR):
 	-mkdir "$(@)"
 
-$(TARGET): $(TMP_DIR) $(OBJECTS) $(ALL_H)  nmc4vars_win.mk Makefile1
+$(TARGET): $(TMP_DIR) $(OBJECTS) $(ALL_H)  nmc4vars_win.mk Makefile
 	$(CC) $(LINKER_FLAGS) $(OBJECTS) $(LIBS)
 
 nmc4vars_win.mk:
@@ -132,8 +130,11 @@ $(TMP_DIR)/%.o: %.cpp
 $(TMP_DIR)/%.o: %.c
 	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS)
 	
-proflist:
-	lua53 $(HAL)/script/profiler-gcc.lua .main1.map > proflist_generated1.asm 
+profile:	
+	python $(HAL)/script/profiler.py > $(PROFILE)
+	$(MAKE)
+	python $(HAL)/script/profiler-gcc.py $(MAP) > $(PROFILE)
+	
 
 #========================== Visual Studio  ===================
 export ALL_CPP ALL_ASM ALL_C ALL_H
