--- a/make/nmopengl-nmc4f/Makefile
+++ b/make/nmopengl-nmc4f/Makefile
@@ -64,7 +64,7 @@ CC               = nmc-g++
 LD               = nmc-ld
 AR               = nmc-ar
 AS               = asm
-CC_FLAGS 	     = -m$(ARCH) $(INC_DIRS)  -std=c++11 -c
+CC_FLAGS 	     = -m$(ARCH) $(INC_DIRS)  -std=c++11 -c -O2
 AR_FLAGS         = rcs $(TARGET)
 AS_FLAGS         =-$(ARCH) -nm2ms  -split_sir -W-111 -W-109 $(INC_DIRS) 
 #=================== SOURCE & OBJECTS COLLECTION ===========================
