--- a/app/templates/project/make_mc12101/Makefile1
+++ b/app/templates/project/make_mc12101/Makefile1
@@ -46,7 +46,7 @@
 #============== PROJECT & BUILD CONFIGURATION ==========
 #
 
-ROOT             = ../..
+ROOT             = ../../../..
 include $(ROOT)/global.mk
 include 		 nmc4vars_win.mk
 #-------------- target & input dirs -------------------
