--- a/2nmc-demo-gcc/make_mc12101/Makefile0
+++ b/2nmc-demo-gcc/make_mc12101/Makefile0
@@ -108,7 +108,7 @@ $(TMP_DIR)/dumps:
 	mkdir $(TMP_DIR)\dumps
 	
 $(TMP_DIR)/dumps/%.dump: $(TMP_DIR)/%.o
-	nmc-objdump $< -D -S >> $@
+	nmc-objdump $< -d -S -x >> $@
 	
 	
 	
