tex tests refatoring;make release/debug modes
1. added nmglBindTexture nm1 context checking
2. Added debug mode for nmgltex_tests app build (make debug)
3. Added h file for common things of nmgltex_tests

--- a/app/nmgltex_tests/make_mc12101/Makefile
+++ b/app/nmgltex_tests/make_mc12101/Makefile
@@ -21,15 +21,23 @@ TARGET_LIB  = main1.abs
 TARGET1  = main1.abs
 TARGET1  = main1.abs
 
+NMTARGET=
+
 VS ?= vs2015 
 #PATH:=$(MC12101)/bin;$(PATH)
+
+
+all: NMTARGET = 
 all: $(TARGET0) $(TARGET1)  $(HOST)
 
+debug: NMTARGET = _debug
+debug: $(TARGET0) $(TARGET1)  $(HOST)
+
 nm0 $(TARGET0): 
-	$(MAKE) -f Makefile0 
+	$(MAKE) -f Makefile0 $(NMTARGET)
 
 nm1 $(TARGET1):
-	$(MAKE) -f Makefile1
+	$(MAKE) $(NMTARGET) -f Makefile1 $(NMTARGET)
 	
 host $(HOST): $(VS)
 
