--- a/app/templates/projectdebug/make_mc12101/Makefile1
+++ b/app/templates/projectdebug/make_mc12101/Makefile1
@@ -45,6 +45,7 @@
 
 #============== PROJECT & BUILD CONFIGURATION ==========
 #
+DEBUG ?= n
 
 ROOT             = ../..
 include $(ROOT)/global.mk
@@ -66,6 +67,12 @@ AS_FLAGS    	 = -c -mmas -x assembler -Wa,-split_sir -mnmc4-fixed
 LIBS             = -lnmpp-nmc4 -lhal-mc12101
 MAP		         = $(PROJECT).map
 LINKER_FLAGS     = -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-Tldscript-nmc1.ld"  -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
+
+ifeq ($(DEBUG),y)
+	CC_FLAGS	+= -DDEBUG
+else
+	CC_FLAGS	+= -DNDEBUG
+endif
 #=================== SOURCE & OBJECTS COLLECTION ===========================
 
 .SUFFIXES:
@@ -106,13 +113,13 @@ $(TMP_DIR)/dumps:
 	mkdir $(TMP_DIR)\dumps
 	
 $(TMP_DIR)/dumps/%.dump: $(TMP_DIR)/%.o
-	nmc-objdump $< -d -t -x -a >> $@
+	nmc-objdump $< -d -S -x >> $@
 	
 	
 $(TMP_DIR):
 	-mkdir "$(@)"
 
-$(TARGET): $(TMP_DIR) $(OBJECTS) $(ALL_H)  nmc4vars_win.mk Makefile
+$(TARGET): $(TMP_DIR) $(OBJECTS) nmc4vars_win.mk Makefile
 	$(CC) $(LINKER_FLAGS) $(OBJECTS) $(LIBS)
 
 nmc4vars_win.mk:
@@ -121,13 +128,13 @@ nmc4vars_win.mk:
 $(OUT_DIR): 
 	-mkdir "$(@)"
 	
-$(TMP_DIR)/%.o: %.asm 
+$(TMP_DIR)/%.o: %.asm  $(ALL_H)
 	$(AS) $(AS_FLAGS) $(<) -o$(@) $(INC_DIRS)
 	
-$(TMP_DIR)/%.o: %.cpp 
+$(TMP_DIR)/%.o: %.cpp  $(ALL_H)
 	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS)
 
-$(TMP_DIR)/%.o: %.c
+$(TMP_DIR)/%.o: %.c $(ALL_H)
 	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS)
 	
 profile:	
