--- a/waves/make_mc12101/Makefile1
+++ b/waves/make_mc12101/Makefile1
@@ -107,13 +107,13 @@ nmc4vars_win.mk:
 $(OUT_DIR): 
 	-mkdir "$(@)"
 	
-$(TMP_DIR)/%.o: %.asm 
+$(TMP_DIR)/%.o: %.asm $(ALL_H)
 	$(AS) $(AS_FLAGS) $(<) -o$(@)  $(INC_DIRS)
 	
-$(TMP_DIR)/%.o: %.cpp 
+$(TMP_DIR)/%.o: %.cpp $(ALL_H)
 	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS) -O2
 
-$(TMP_DIR)/%.o: %.c
+$(TMP_DIR)/%.o: %.c $(ALL_H)
 	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS) -O2
 	
 proflist:
