--- a/app/templates/projectdebug/make_mc12101/Makefile
+++ b/app/templates/projectdebug/make_mc12101/Makefile
@@ -40,7 +40,7 @@ vs2005: $(HOST).vcproj
 	"$(VS80COMNTOOLS)vsvars32" && vcbuild $(HOST).vcproj
 
 vs2015:	$(HOST).vcxproj
-	"$(VS140COMNTOOLS)vsvars32" && msbuild $(HOST).vcxproj /p:Configuration=Debug
+	"$(VS140COMNTOOLS)vsvars32" && msbuild $(HOST).vcxproj /p:Configuration=Release
 
 $(HOST).vcproj:
 	premake5 vs2005
@@ -50,6 +50,6 @@ $(HOST).vcxproj:
 
 
 run: $(TARGET0) $(TARGET1) $(HOST)
-	bin\debug\$(HOST)
+	bin\x86\Release\$(HOST)-x86
 	
 include $(ROOT)/clean.mk
