--- a/app/templates/project/make_mc12101/Makefile0
+++ b/app/templates/project/make_mc12101/Makefile0
@@ -67,7 +67,8 @@ AS               = nmc-gcc
 AS_FLAGS    	 = -c -mmas -x assembler -mnmc4-float
 LIBS             = -lnmopengl-nmc4f -lnmpp-nmc4f -lhal-mc12101 
 MAP		         = $(PROJECT).map
-LINKER_FLAGS     = -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-Tldscript-nmc0.ld" -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET) 
+CFG				 = ldscript-nmc0.ld
+LINKER_FLAGS     = -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-T$(CFG)" -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET) 
 
 ifeq ($(DEBUG),y)
 	CC_FLAGS	+= -DDEBUG
@@ -109,7 +110,7 @@ all:  $(TARGET)
 $(TMP_DIR):
 	-mkdir "$(@)"
 
-$(TARGET): $(TMP_DIR) $(OBJECTS) $(ALL_H) nmc4vars_win.mk Makefile
+$(TARGET): $(TMP_DIR) $(OBJECTS) $(ALL_H) $(CFG) nmc4vars_win.mk Makefile
 	$(CC) $(CC_FLAGS) $(LINKER_FLAGS) $(OBJECTS) $(LIBS)
 
 nmc4vars_win.mk:
@@ -118,13 +119,13 @@ nmc4vars_win.mk:
 $(OUT_DIR): 
 	-mkdir "$(@)"
 	
-$(TMP_DIR)/%.o: %.asm  $(ALL_H)
+$(TMP_DIR)/%.o: %.asm  $(ALL_H) $(CFG)
 	$(AS) $(AS_FLAGS) $(<) -o$(@) $(INC_DIRS)
 	
-$(TMP_DIR)/%.o: %.cpp  $(ALL_H)
+$(TMP_DIR)/%.o: %.cpp  $(ALL_H) $(CFG)
 	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS)
 
-$(TMP_DIR)/%.o: %.c  $(ALL_H)
+$(TMP_DIR)/%.o: %.c  $(ALL_H) $(CFG)
 	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS)
 	
 profile:	
