--- a/app/nmgltex_tests/make_mc12101/Makefile0
+++ b/app/nmgltex_tests/make_mc12101/Makefile0
@@ -61,7 +61,7 @@ LIB_DIRS         = -L"$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL
 TMP_DIR          = Release
 #-------------- RELEASE/ALL config -------------------
 CC 				 = nmc-g++
-CC_FLAGS	 	 = -O2 -fno-builtin-printf -std=c++11
+CC_FLAGS	 	 = -O2 -fno-builtin-printf -std=c++11 -mnmc4-float
 CC_FLAGS+= -DTEST_NMGL_TEX_FUNC
 AS               = nmc-gcc 				 
 AS_FLAGS    	 = -c -mmas -x assembler -mnmc4-float
