Add missing nmglTex functions
There were no nmgl interface functions in nmOpenGL pipiline so there was
no possible to write programs using OpenGL calls for texturing. All
texture parameters were set inside some internal pipeline functions.

* Add missing nmOpenGL interface functions from branch textures.
(nmglTexImage2D and nmglTexSubImage2D were added from addPadding..
branch)
* nm_main0 function was corrected to set texture parameters by
  OpenGL calls.
* unpackAlignment was setup to 1 in nm1 tex state init, because
  nmglTexImage2D load texture so that unpackAlignment value is 1

works at mc12101 with hal commit "halMalloc". With hal branch x64 SYNCHRO section
is overflowed by 8 bytes. x86 does not work because texture storage is
static array in EMI (not heap) and nm1 can't use the address of static array from
not heap section in x86 model.

--- a/texture-demo-gcc/make_x86/Makefile
+++ b/texture-demo-gcc/make_x86/Makefile
@@ -37,7 +37,11 @@ $(HOST).vcxproj $(TARGET0).vcxproj $(TARGET1).vcxproj:
 
 
 run: 
-	$(MAKE) -j4 runhost runtarget0  runtarget1 
+	start "" "bin\debug\$(HOST)"
+	sleep 1 
+	start "" "bin\debug\$(TARGET0)"
+	sleep 1 
+	start "" "bin\debug\$(TARGET1)"
 
 runhost: $(HOST)
 	bin\debug\$(HOST)
