--- a/app/nmgltex_tests/make_mc12101/Makefile0
+++ b/app/nmgltex_tests/make_mc12101/Makefile0
@@ -58,7 +58,7 @@ TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include -I"../include"
 SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc0 ../src_target0 ./ ../src_nm ../src_target0/tests
 LIB_DIRS         = -L"$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib" -L$(ROOT)/lib
-TMP_DIR          = Release
+TMP_DIR          ?= tmp_obj
 #-------------- RELEASE/ALL config -------------------
 CC 				 = nmc-g++
 CC_FLAGS	 	 = -O2 -fno-builtin-printf -std=c++11 -mnmc4-float
@@ -69,11 +69,11 @@ LIBS             = -lnmopengl-nmc4f -lnmpp-nmc4f -lhal-mc12101
 MAP		         = $(PROJECT).map
 LINKER_FLAGS     = -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-Tldscript-nmc0.ld" -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET) 
 
-ifeq ($(DEBUG),y)
-	CC_FLAGS	+= -DDEBUG
-else
-	CC_FLAGS	+= -DNDEBUG
-endif
+#ifeq ($(DEBUG),y)
+#	CC_FLAGS	+= -DDEBUG
+#else
+#	CC_FLAGS	+= -DNDEBUG
+#endif
 #=================== SOURCE & OBJECTS COLLECTION ===========================
 
 .SUFFIXES:
@@ -100,6 +100,7 @@ default: $(TARGET)
 
 #$(TMP_DIR) $(OUT_DIR)  $(TARGET)
 
+all:  CC_FLAGS += -NDEBUG
 all:  $(TARGET)
 	
 #	$(MAKE) -j4 DEBUG=y
