--- a/app/nmgltex_tests/make_mc12101/Makefile1
+++ b/app/nmgltex_tests/make_mc12101/Makefile1
@@ -56,7 +56,7 @@ TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
 SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc1 $(ROOT)/src_proc1/common $(ROOT)/src_proc $(ROOT)/src_proc1/nm ../src_target1 ./
 LIB_DIRS         = -L "$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib" -L$(ROOT)/lib
-TMP_DIR          = Release
+TMP_DIR          ?= tmp_obj
 #-------------- RELEASE/ALL config -------------------
 CC 				 = nmc-g++
 CC_FLAGS		 = -O2 -fno-builtin-printf -std=c++11
@@ -66,11 +66,11 @@ AS_FLAGS    	 = -c -mmas -x assembler -Wa,-split_sir -mnmc4-fixed
 LIBS             = -lnmopengl-nmc4 -lhal-mc12101 -lnmpp-nmc4
 MAP		         = $(PROJECT).map
 LINKER_FLAGS     =   -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-Tldscript-nmc1.ld"  -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
-ifeq ($(DEBUG),y)
-	CC_FLAGS	+= -DDEBUG
-else
-	CC_FLAGS	+= -DNDEBUG
-endif
+#ifeq ($(DEBUG),y)
+#	CC_FLAGS	+= -DDEBUG
+#else
+#	CC_FLAGS	+= -DNDEBUG
+#endif
 #=================== SOURCE & OBJECTS COLLECTION ===========================
 
 .SUFFIXES:
@@ -97,6 +97,7 @@ default: $(TARGET)
 
 #$(TMP_DIR) $(OUT_DIR)  $(TARGET)
 
+all:  CC_FLAGS += -NDEBUG
 all:  $(TARGET)
 
 _debug: CC_FLAGS += -DDEBUG
